--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Snake Clash 3D - Antigravity Edition</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -314,31 +314,35 @@
         }
       }
 
-      /* Daily Rewards Modal Centered */
+      /* Mobile Optimized Daily Rewards Modal */
       #daily-modal {
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        background: white;
-        padding: 30px;
-        border-radius: 30px;
-        z-index: 300;
+        background: #ffffff;
+        padding: 40px 20px;
+        border-radius: 40px;
+        z-index: 500;
         text-align: center;
         color: #050510;
-        box-shadow: 0 20px 50px rgba(0,0,0,0.8);
-        width: 80%;
-        max-width: 320px;
+        box-shadow: 0 0 100px rgba(0,0,0,0.9);
+        width: 85%;
+        max-width: 340px;
+        border: 4px solid var(--secondary);
       }
       .reward-claim-btn {
         background: var(--gradient);
         color: white;
         border: none;
-        padding: 10px 30px;
-        border-radius: 20px;
+        padding: 15px 40px;
+        border-radius: 30px;
         font-weight: 900;
-        margin-top: 20px;
+        font-size: 1.2rem;
+        margin-top: 25px;
         cursor: pointer;
+        width: 100%;
+        box-shadow: 0 10px 20px rgba(255, 0, 122, 0.3);
       }
 
       /* Boss HUD */
