Final verification: Added version v1.0.4 and reset button for testing

--- a/ui/index.html
+++ b/ui/index.html
@@ -278,6 +278,7 @@
         font-weight: 900;
         background: linear-gradient(45deg, var(--primary), var(--secondary));
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
         text-shadow: 0 0 20px rgba(255, 0, 122, 0.5);
       }
@@ -456,6 +457,7 @@
         </div>
 
         <div class="bottom-nav">
+          <div id="btn-reset" style="position: absolute; bottom: 80px; right: 10px; font-size: 0.5rem; opacity: 0.3; color: white;">RESET DATA</div>
           <div class="nav-btn">🛒<br />Shop</div>
           <div id="btn-skins" class="nav-btn">🎭<br />Skins</div>
           <div class="nav-btn" style="color: #00f2ff">🐍<br />Fight</div>
@@ -531,6 +533,7 @@
         "
       >
         DRAG TO STEER • DOUBLE TAP TO BOOST
+        <div style="font-size: 0.6rem; margin-top: 5px; opacity: 0.3;">v1.0.4</div>
       </div>
     </div>
 
