--- a/ui/index.html
+++ b/ui/index.html
@@ -53,10 +53,8 @@
           visibility 0.3s;
       }
 
-      .overlay.hidden {
-        opacity: 0;
-        visibility: hidden;
-        pointer-events: none;
+      .hidden {
+        display: none !important;
       }
 
       /* Top Bar (Currency) */
@@ -132,28 +130,33 @@
       .upgrades-panel {
         display: flex;
         justify-content: center;
-        gap: 10px;
-        padding: 20px 10px;
+        gap: 8px;
+        padding: 10px 5px;
         pointer-events: auto;
         flex-wrap: wrap;
       }
 
       .upgrade-card {
         background: white;
-        padding: 12px 6px;
-        border-radius: 20px;
-        width: calc(33% - 15px);
-        min-width: 90px;
+        padding: 10px 4px;
+        border-radius: 15px;
+        width: 28%;
+        min-width: 80px;
         text-align: center;
         color: #050510;
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 5px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+        gap: 3px;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
         cursor: pointer;
-        transition: transform 0.2s;
+        transition: transform 0.23s;
       }
+@media (max-width: 480px) {
+    .upgrade-card { width: 30%; font-size: 0.8rem; }
+    .start-prompt h1 { font-size: 1.8rem; margin-top: 40px; }
+    .top-bar { padding: 10px; gap: 10px; }
+}
 
       .upgrade-card:active {
         transform: scale(0.95);
